--- a/index.html
+++ b/index.html
@@ -29,27 +29,28 @@
             <p id="magicP">Did you know some animals and plants can glow in the dark? This cool trick is called bioluminescence. It happens when a special chemical reaction inside their bodies creates light. It&apos;s like nature&apos;s version of neon lights!</p>
             <p id="howItWorks">Here&apos;s how it works:</p>
             <div id="magicalList">
-                <ul id="magicList">
-
-                    <li>1. A molecule called luciferin mixes with oxygen.  </li>
-                    <li>2. An enzyme called luciferase helps speed up the process.</li>
-                    <li>3. Voilà! A glow appears, but without heat &dash; it&apos;s called “cold light.”</li>
-                </ul>
+                <ol id="magicList">
+                    <li>A molecule called luciferin mixes with oxygen.  </li>
+                    <li>An enzyme called luciferase helps speed up the process.</li>
+                    <li>Voilà! A glow appears, but without heat &dash; it&apos;s called “cold light.”</li>
+                </uo>
             </div>
             <img src="images/29ec08afddd2880728c456e399e0628b.png" width="180px"> 
             <div id="listAndHeader">
                 <h3 id="whereWeSeeIt">Where Do We See It?</h3>
                 <div id="listSomething">
-                    <ul>
-                        <li id="li1"><img id="imgCircle1" src="images/Rectangle 2332.png">Fireflies: They flash to talk to each other and attract mates</li>
-                        <li id="li2"><img id="imgCircle2" src="images/Rectangle 2332.png"> fish: They use it to scare predators or lure prey.</li>
-                        <li id="li3"><img id="imgCircle3" src="images/Rectangle 2332.png">Fungi and plants: Some even glow to attract bugs or spread spores!</li>
+                    <ul id="magicalAnimals">
+                        <li id="fireflies"><img id="imgCircleOne" src="images/Rectangle 2332.png">Fireflies: They flash to talk to each other and attract mates</li>
+                        <li id="fish"><img id="imgCircleTwo" src="images/Rectangle 2332.png">Deep-sea fish: They use it to scare predators or lure prey.</li>
+                        <li id="fungi"><img id="imgCircleThree" src="images/Rectangle 2332.png">Fungi and plants: Some even glow to attract bugs or spread spores!</li>
                     
                     </ul>
                 </div>
             </div>
             <img id="fish" src="images/867e21fd95cb2eafc56d4fc33e922e05.png" width="320px">
-            <a href="#">See more on the link</a>
+            <div id="lastAnchor">
+                <a href="#">See more on the link</a>
+            </div>
         </div>
     </main>
 </body>
